# Qt6MultiPlatformDemo

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  main.cpp
android/: AndroidManifest.xml  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
